# LingoLoop

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/generate-profile/: SKILL.md
src/backend/: server.py
src/frontend/: app.js  index.html  style.css  tts-util.js
src/scripts/: generate_profile.py  seed_dummy.py
tests/: test_generate_profile.py  test_server.py  tts.test.js
