[project]
name = "lingoloop"
version = "0.1.0"
description = "Context-Injection personal language-learning loop app (Zero API Cost)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[tool.uv]
package = false

[tool.lingoloop]
# Mastery threshold: an item is "mastered" (and filtered out of quizzes)
# once consecutive_correct reaches this value.
mastery_threshold = 3
