[project]
name = "lingoloop"
version = "0.1.0"
description = "Context-Injection personal language-learning loop app (Zero API Cost)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[tool.uv]
package = false

[dependency-groups]
# 개발/테스트 전용 의존성. `uv run` / `uv sync` 시 기본 포함되는 그룹.
dev = [
    "pytest>=8",
    "httpx>=0.27",   # fastapi.testclient가 사용
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.lingoloop]
# Mastery threshold: an item is "mastered" (and filtered out of quizzes)
# once consecutive_correct reaches this value.
mastery_threshold = 3
